--- a/package.json
+++ b/package.json
@@ -18,9 +18,10 @@
   },
   "homepage": "https://github.com/benabbott85/Project-2-#readme",
   "dependencies": {
-    "materialize-css": "^1.0.0-rc.2",
     "express": "^4.17.1",
+    "express-handlebars": "^3.1.0",
     "fs": "0.0.1-security",
+    "materialize-css": "^1.0.0-rc.2",
     "mysql2": "^2.1.0",
     "sequelize": "^5.21.3"
   }
