--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "express-handlebars": "^3.1.0",
     "fs": "0.0.1-security",
     "materialize-css": "^1.0.0-rc.2",
+    "moment": "^2.24.0",
     "mysql2": "^2.1.0",
     "sequelize": "^5.21.3"
   }
