--- a/config/config.json
+++ b/config/config.json
@@ -9,7 +9,7 @@
   },
   "test": {
     "username": "root",
-    "password": "Greatk8@2020",
+    "password": "reatk8@2020",
     "database": "travelfinder_db",
     "host": "127.0.0.1",
     "port": 3306,
@@ -17,7 +17,7 @@
   },
   "production": {
     "username": "root",
-    "password": "Greatk8@2020",
+    "password": "reatk8@2020",
     "database": "travelfinder_db",
     "host": "127.0.0.1",
     "port": 3306,
