--- a/config/config.json
+++ b/config/config.json
@@ -22,6 +22,6 @@
     "host": "127.0.0.1",
     "port": 3306,
     "dialect": "mysql",
-    "use_env_variable": "JAWSDB_url"
+    "use_env_variable": "JAWSDB_URL"
   }
 }
