--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "materialize-css": "^1.0.0-rc.2",
     "moment": "^2.24.0",
     "mysql2": "^2.1.0",
+    "nodemailer": "^6.4.2",
     "sequelize": "^5.21.3"
   }
 }
